--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,7 +47,7 @@
   <a href="/curiosity">Go to Gallery</a>
   <div class="grid-container">
     {{#each marsPhotoData}}
-      <a href="/curiosity/{{data.0.nasa_id}}"><img
+      <a href="/library/{{data.0.nasa_id}}"><img
           class="img-day"
           src="{{links.0.href}}"
           loading="lazy"
