--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -10,7 +10,7 @@
         </a>
       {{/if}}
       <p>{{description}}</p>
-      <a href="/private-library/{{_id}}">See more</a>
+      <a class="link-button" href="/private-library/{{_id}}">See more</a>
 
     {{/each}}
 
