--- a/views/moon.hbs
+++ b/views/moon.hbs
@@ -3,13 +3,13 @@
   <div class="grid-container">
     {{#each moonPhotoData}}
       <div>
-        <a href="/curiosity/{{data.0.nasa_id}}"><img
+        <a href="/library/{{data.0.nasa_id}}"><img
             class="img-day"
             src="{{links.0.href}}"
             alt="Moon Image"
           /></a>
         <h1>{{data.0.title}}</h1>
-        <a href="/curiosity/{{data.0.nasa_id}}">See more</a>
+        <a class="link-button" href="/library/{{data.0.nasa_id}}">See more</a>
       
         {{#if ../isLoggedIn}}
           <form action="/favorites" method="post">
