--- a/views/private-page/favorites.hbs
+++ b/views/private-page/favorites.hbs
@@ -4,13 +4,15 @@
   <div class="grid-container">
     {{#each favorites}}
       <div>
-        <a href="/library/{{this.0.data.0.nasa_id}}"><img
+        <a href="/favorites/{{this.0.data.0.nasa_id}}"><img
             class="img-day"
             src="{{this.0.links.0.href}}"
             alt="Picture of the day"
           /></a>
         <h1>{{this.0.data.0.title}}</h1>
-        <a href="/library/{{this.0.data.0.nasa_id}}">See more</a>
+
+        <a class="link-button" href="/favorites/{{this.0.data.0.nasa_id}}">See
+          more</a>
       </div>
     {{/each}}
   </div>
