--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
-<h1>Hello Spacelover!</h1>
+{{! <h1>Hello Spacelover!</h1> }}
 
 <div class="background-container">
   <h2> Picture Of the day</h2>
-  <h4>Discover the cosmos! Each day a different image or photograph of our
+  <h2>Discover the cosmos! Each day a different image or photograph of our
     fascinating universe is featured, along with a brief explanation written by
-    a professional astronomer.</h4>
+    a professional astronomer.</h2>
   <div class="flex-container">
     <div class="center-container">
       <img
@@ -27,7 +27,7 @@
 
 <div class="background-container">
   <h2> NASA Image Library</h2>
-  <a href="/Library">Go to Library</a>
+  <a class="library-link" href="/Library">Go to Library</a>
   <div class="grid-container">
     {{#each randomLibrary}}
       <a href="/library/{{data.0.nasa_id}}"><img
