--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,9 +10,9 @@
 
   <body>
     <nav class="layout-nav">
-      <div>
+      {{! <div>
         <img class="img-logo" src="/images/nasa-logo.png" alt="Nasa Logo" />
-      </div>
+      </div> }}
       <div class="nav-links-container">
         <div class="container-layout">
           <a href="/">Home</a>
@@ -34,7 +34,7 @@
               <a href="/profile">Profile</a>
               <a href="/private-library">Private Library</a>
               <a href="/favorites">Favorites</a>
-              <a href="/private/create">create new image</a>
+              <a href="/private/create">Create new Image</a>
               <a href="/admin">Settings</a>
             </div>
           </div>
