--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,7 +1,7 @@
 <div class="center-container">
   <form class="search-form" action="/library/search" method="post">
     <input type="text" placeholder="Search.." name="keyword" />
-    <button type="submit">Search</button>
+    <button class="search-btn" type="submit">Search</button>
   </form>
 </div>
 
