--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -21,7 +21,7 @@
     <input type="submit" value="Signup" />
   </form>
 
-  <button>
+  {{! <button>
     <a href="/login">Go to log in page</a>
-  </button>
+  </button> }}
 </div>
