--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,12 @@ h1 {
 h2 {
   font-size: 40px;
   text-align: center;
+  padding: 20px;
+}
+
+h3 {
+  text-align: center;
+  font-size: 20px;
 }
 .link-button {
   color: #000000;
@@ -88,6 +94,7 @@ img {
 .background-container {
   margin: 0 90 50px;
   padding: 0 50px;
+  text-align: center;
   background-color: rgb(0, 0, 0);
   color: #ffffff;
 }
