--- a/views/private-page/favorite-Imagedetail.hbs
+++ b/views/private-page/favorite-Imagedetail.hbs
@@ -12,7 +12,7 @@
     </div>
     <div>
       <form action="/favorites/{{imageData.data.0.nasa_id}}" method="post">
-        <button type="submit">Remove as Favorite Image</button>
+        <button class="favorites-btn" type="submit">Remove from favorites</button>
       </form>
     </div>
   </div>
