--- a/views/sun.hbs
+++ b/views/sun.hbs
@@ -13,7 +13,7 @@
         <!-- ../ reach variable outside of #each-->
         {{#if ../isLoggedIn}}
           <form action="/favorites" method="post">
-            <button type="submit">Save as favorite</button>
+            <button class="favorites-btn" type="submit">Add to favorites</button>
             <input
               type="text"
               name="imageId"
