--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,7 @@
             <a href="/library">Nasa Image Library</a>
             <a href="/The-Sun">The Sun</a>
             <a href="/The-Moon">The Moon</a>
+            <a href="/The-Venus">The Venus</a>
             <a href="/curiosity">Mars Rover</a>
 
           </div>
