--- a/views/private-page/Image-detail.hbs
+++ b/views/private-page/Image-detail.hbs
@@ -14,10 +14,11 @@
   </div>
 
   <div>
-    <a href="/private-library/edit/{{imageData._id}}">edit movie</a>
+    <button class="edit-btn">
+      <a href="/private-library/edit/{{imageData._id}}">Edit Image</a></button>
     <div>
       <form action="/private-library/delete/{{imageData._id}}" method="post">
-        <button type="submit">Delete</button>
+        <button class="delete-btn" type="submit">Delete Image</button>
       </form>
     </div>
   </div>
