--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -1,4 +1,4 @@
-<form action="/private/create" method="post">
+<form class="new-img-form" action="/private/create" method="post">
   <label>Name:
     <input type="text" name="name" />
   </label>
@@ -9,7 +9,7 @@
     Image Url:
     <input type="text" name="image" />
   </label>
-  <div>
+  <div class="sub-btn">
     <button class="submit-btn" type="submit">Create Image</button>
   </div>
 </form>
