--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -9,7 +9,7 @@
           <img src="{{image}}" alt={{title}} />
         </a>
       {{/if}}
-      <p>{{description}}</p>
+      <h3>{{description}}</h3>
       <a class="link-button" href="/private-library/{{_id}}">See more</a>
 
     {{/each}}
