--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -152,11 +152,25 @@ input {
   font-size: 18pt;
 }
 
+.signup {
+  text-align: center;
+  font-size: 20px;
+  padding: 50px;
+}
+.h1-signup {
+  font-size: 40px;
+}
 .login {
   text-align: center;
+  font-size: 20px;
   padding: 30px;
   /* background-image: url(/public/images/man-looking-stars.jpeg); */
 }
+
+.h1-login {
+  font-size: 40px;
+}
+
 .favorites-btn {
   background-color: #000000;
   color: white;
