--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -1,6 +1,6 @@
-<h1>Signup</h1>
+<h1 class="h1-signup">Signup</h1>
 
-<div>
+<div class="signup">
 
   <form action="/signup" method="post">
     <input
