padding on profile links

--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,7 +1,7 @@
 {{! <h1>Hello</h1> }}
 
-<a href="/private-library">Library</a>
+<a class="profile-btn" href="/private-library">Library</a>
 
 {{#if isAdmin}}
-  <a class="btn" href="/admin">Private</a>
+  <a class="profile-btn" href="/admin">Private</a>
 {{/if}}
