--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,10 +9,13 @@
   </head>
 
   <body>
+
     <nav class="layout-nav">
       {{! <div>
         <img class="img-logo" src="/images/nasa-logo.png" alt="Nasa Logo" />
       </div> }}
+
+      <div><img class="moon-logo" src="/images/moon2.webp" alt="moon" /></div>
       <div class="nav-links-container">
         <div class="container-layout">
           <a href="/">Home</a>
