--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -5,3 +5,9 @@
 {{#if isAdmin}}
   <a class="profile-btn" href="/admin">Private</a>
 {{/if}}
+
+{{! <div><img
+    class="man-looking-stars"
+    src="/images/man-looking-stars.jpeg"
+    alt="moon"
+  /></div> }}
