--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,11 +11,9 @@
   <body>
 
     <nav class="layout-nav">
-      {{! <div>
-        <img class="img-logo" src="/images/nasa-logo.png" alt="Nasa Logo" />
-      </div> }}
-
-      <div><img class="moon-logo" src="/images/moon2.webp" alt="moon" /></div>
+      <div>
+        <img class="moon-logo" src="/images/moon2.webp" alt="moon" />
+      </div>
       <div class="nav-links-container">
         <div class="container-layout">
           <a href="/">Home</a>
@@ -61,6 +59,12 @@
     </nav>
 
     {{{body}}}
+
+    <footer>
+      <div>
+        <img class="moon-logo" src="/images/nasa-logo.png" alt="Nasa Logo" />
+      </div>
+    </footer>
 
     <script src="/js/script.js"></script>
   </body>
