--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,12 +39,20 @@ a,
   height: 80px;
 }
 
-img {
-  height: 400px;
+.img-gallery {
+  width: 400px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(85, 213, 255, 0.2),
+    0 6px 20px 0 rgba(78, 78, 78, 0.2);
 }
 
 .img-day {
+  height: auto;
   width: 400px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .layout-nav {
@@ -87,19 +95,31 @@ img {
   display: block;
   text-align: left;
 }
-
 .dropdown-content a:hover {
   background-color: white;
   color: #000000;
 }
-
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-.background-container,
+.background-container {
+  margin: 0 50px;
+  padding: 0 50px;
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+}
+
+.page-title {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 30pt;
+  text-shadow: 0 4px 8px 0 rgba(85, 213, 255, 0.2);
+}
+
 .library-link {
-  margin: 0 90 50px;
+  margin: 0 50px;
   padding: 0 50px;
   text-align: center;
   background-color: rgb(0, 0, 0);
