--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,7 +115,7 @@ a,
   color: rgb(255, 255, 255);
   text-align: center;
   font-size: 30pt;
-  text-shadow: 0 4px 8px 0 rgba(85, 213, 255, 0.2);
+  text-shadow: 4px 4px rgba(85, 212, 255, 0.607);
 }
 
 .library-link {
