--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,6 +30,7 @@
   <a class="library-link" href="/Library">Go to Library</a>
   <div class="grid-container">
     {{#each randomLibrary}}
+      {{! do background image in a div}}
       <a href="/library/{{data.0.nasa_id}}"><img
           class="img-gallery"
           src="{{links.0.href}}"
