--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,14 @@
 body {
   font: 14px Fragile Bombers;
   margin: 0;
-  background-image: url("/images/universe.jpg");
-  color: black;
+  background-image: url("/images/stars-background.avif");
+  color: rgb(255, 255, 255);
 }
 
 h1 {
   text-align: center;
   padding: 10px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 h2 {
   font-size: 40px;
@@ -20,7 +20,7 @@ h3 {
   font-size: 20px;
 }
 .link-button {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 a,
@@ -42,18 +42,20 @@ a,
   width: 350px;
   height: 350px;
   border-radius: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(80, 80, 80, 0.2),
+    0 6px 20px 0 rgba(94, 94, 94, 0.2);
 }
 
 .img-day {
   height: 400px;
   width: 400px;
   border-radius: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(80, 80, 80, 0.2),
+    0 6px 20px 0 rgba(94, 94, 94, 0.2);
 }
 
 .layout-nav {
-  background-color: #4c7db5;
+  background-color: #000000;
   padding: 20px;
   text-align: center;
   display: flex;
@@ -104,13 +106,13 @@ a,
   margin: 150px;
   padding: 0 50px;
   text-align: center;
-  background-color: rgb(238, 243, 255);
+  background-color: rgb(0, 0, 0);
 }
 
 .page-title {
   text-align: center;
   font-size: 30pt;
-  text-shadow: 2px 4px rgba(0, 0, 0, 0.607);
+  text-shadow: 2px 4px rgba(0, 4, 111, 0.607);
 }
 .subtitle {
   padding: 0 50px;
