--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,52 +43,100 @@
 
 <div class="background-container">
 
-  <h2 class="page-title"> Mars Curiosity</h2>
-  <a href="/curiosity">Go to Gallery</a>
-  <div class="grid-container">
-    {{#each marsPhotoData}}
-      <a href="/library/{{data.0.nasa_id}}"><img
-          class="img-gallery"
-          src="{{links.0.href}}"
-          loading="lazy"
-          alt="Mars Rover Image"
-        /></a>
-    {{/each}}
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="0"
+        class="active"
+        aria-current="true"
+        aria-label="Slide 1"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="1"
+        aria-label="Slide 2"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="2"
+        aria-label="Slide 3"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="3"
+        aria-label="Slide 4"
+      ></button>
+    </div>
+
+    <div class="carousel-inner">
+
+      <div class="carousel-item">
+        {{#each sunPhotoData}}
+          <a href="/library/{{data.0.nasa_id}}">
+            <img src="{{links.0.href}}" class="d-block w-100" alt="..." /></a>
+        {{/each}}
+        <div class="carousel-caption d-none d-md-block">
+          <h5>The Sun Gallery</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        {{#each moonPhotoData}}
+          <a href="/library/{{data.0.nasa_id}}">
+            <img src="{{links.0.href}}" class="d-block w-100" alt="..." /></a>
+        {{/each}}
+        <div class="carousel-caption d-none d-md-block">
+          <h5>The Moon Gallery</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        {{#each venusPhotoData}}
+          <a href="/library/{{data.0.nasa_id}}">
+            <img src="{{links.0.href}}" class="d-block w-100" alt="..." /></a>
+        {{/each}}
+        <div class="carousel-caption d-none d-md-block">
+          <h5>The Venus Gallery</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+
+      <div class="carousel-item active">
+        {{#each marsPhotoData}}
+          <a href="/library/{{data.0.nasa_id}}">
+            <img src="{{links.0.href}}" class="d-block w-100" alt="..." /></a>
+        {{/each}}
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Mars Curiosity Images</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <h2 class="page-title">The Sun</h2>
-  <a href="/curiosity">Go to Gallery</a>
-  <div class="grid-container">
-    {{#each sunPhotoData}}
-      <a href="/library/{{data.0.nasa_id}}"><img
-          class="img-gallery"
-          src="{{links.0.href}}"
-          loading="lazy"
-          alt="Mars Rover Image"
-        /></a>
-    {{/each}}
-  </div>
-  <h2 class="page-title">The Moon</h2>
-  <a href="/curiosity">Go to Gallery</a>
-  <div class="grid-container">
-    {{#each moonPhotoData}}
-      <a href="/library/{{data.0.nasa_id}}"><img
-          class="img-gallery"
-          src="{{links.0.href}}"
-          loading="lazy"
-          alt="Mars Rover Image"
-        /></a>
-    {{/each}}
-  </div>
-  <h2 class="page-title">The Venus</h2>
-  <a href="/curiosity">Go to Gallery</a>
-  <div class="grid-container">
-    {{#each venusPhotoData}}
-      <a href="/library/{{data.0.nasa_id}}"><img
-          class="img-gallery"
-          src="{{links.0.href}}"
-          loading="lazy"
-          alt="Mars Rover Image"
-        /></a>
-    {{/each}}
-  </div>
+
 </div>
