--- a/views/library.hbs
+++ b/views/library.hbs
@@ -6,18 +6,17 @@
 </div>
 
 <div class="background-container">
-
+  <div class="gallery-container">
   <h1>Nasa Image Library</h1>
   <div class="grid-container">
     {{#each randomLibrary}}
       <div>
         <a href="/library/{{data.0.nasa_id}}"><img
-            class="img-day"
+            class="img-gallery"
             src="{{links.0.href}}"
             alt="Picture of the day"
           /></a>
-        <h1>{{data.0.title}}</h1>
-        <a class="link-button" href="/library/{{data.0.nasa_id}}">See more</a>
+        <h3>{{data.0.title}}</h3>
           {{#if ../isLoggedIn}}
           <form action="/favorites" method="post">
             <button class="favorites-btn" type="submit">Add to favorites</button>
@@ -31,5 +30,6 @@
         {{/if}}
       </div>
     {{/each}}
+  </div>
   </div>
 </div>
