--- a/views/sun.hbs
+++ b/views/sun.hbs
@@ -1,16 +1,16 @@
 <div class="background-container">
+  <div class="gallery-container">
   <h1>The Sun</h1>
   <div class="grid-container">
     {{#each sunPhotoData}}
       <div>
         <a href="/library/{{data.0.nasa_id}}"><img
-            class="img-day"
+            class="img-gallery"
             src="{{links.0.href}}"
             alt="sun Rover Image"
           /></a>
-        <h1>{{data.0.title}}</h1>
-        <a class="link-button" href="/library/{{data.0.nasa_id}}">See more</a>
-        <!-- ../ reach variable outside of #each-->
+        <h3>{{data.0.title}}</h3>
+       
         {{#if ../isLoggedIn}}
           <form action="/favorites" method="post">
             <button class="favorites-btn" type="submit">Add to favorites</button>
@@ -24,5 +24,6 @@
         {{/if}}
       </div>
     {{/each}}
+  </div>
   </div>
 </div>
