--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,6 +45,13 @@ h3 {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.542),
     0 6px 20px 0 rgba(255, 255, 255, 0.2);
 }
+.img-detail {
+  height: auto;
+  width: 600px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 11, 211, 0.542),
+    0 6px 20px 0 rgba(0, 10, 205, 0.2);
+}
 
 /* general style */
 .background-container {
@@ -133,11 +140,6 @@ input {
 }
 
 /* different */
-
-.img-description {
-  text-align: justify;
-  font-size: 18pt;
-}
 
 .signup {
   text-align: center;
