--- a/views/moon.hbs
+++ b/views/moon.hbs
@@ -1,17 +1,18 @@
 <div class="background-container">
-  <h1>The Moon</h1>
-  <div class="grid-container">
-    {{#each moonPhotoData}}
-      <div>
-        <a href="/library/{{data.0.nasa_id}}"><img
-            class="img-day"
+  <div class="gallery-container">
+      <h1>The Moon</h1>
+      <div class="grid-container">
+        {{#each moonPhotoData}}
+        <div>
+         <a href="/library/{{data.0.nasa_id}}"><img
+            class="img-gallery"
             src="{{links.0.href}}"
             alt="Moon Image"
           /></a>
-        <h1>{{data.0.title}}</h1>
-        <a class="link-button" href="/library/{{data.0.nasa_id}}">See more</a>
+         <h3>{{data.0.title}}</h3>
       
-        {{#if ../isLoggedIn}}
+      
+          {{#if ../isLoggedIn}}
           <form action="/favorites" method="post">
             <button class="favorites-btn" type="submit">Add to favorites</button>
             <input
@@ -21,8 +22,9 @@
               hidden="true"
             />
           </form>
-        {{/if}}
+          {{/if}}
+        </div>
+         {{/each}}
       </div>
-    {{/each}}
   </div>
 </div>
