--- a/views/nasaImage-detail.hbs
+++ b/views/nasaImage-detail.hbs
@@ -4,13 +4,17 @@
   <div>
     {{#if imageData.links.0.href}}
 
-      <img src="{{imageData.links.0.href}}" alt={{imageData.data.0.title}} />
+      <img
+        class="img-detail"
+        src="{{imageData.links.0.href}}"
+        alt={{imageData.data.0.title}}
+      />
 
     {{/if}}
 
     <div>
-      <h2><strong>Description</strong></h2>
-      <p class="img-description">{{imageData.data.0.description}}</p>
+      <h3><strong>Description</strong></h3>
+      <h3>{{imageData.data.0.description}}</h3>
     </div>
   </div>
 </div>
