--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,7 +108,6 @@ h3 {
 
 /* carousel */
 .carousel-inner {
-  height: ;
 }
 
 /* library */
@@ -139,8 +138,11 @@ input {
   background-color: #000000;
 }
 
-/* different */
-
+/* form */
+.form-container {
+  text-align: left;
+  margin: 20px;
+}
 .signup {
   text-align: center;
   font-size: 20px;
@@ -176,14 +178,15 @@ input {
   font-size: 20px;
   border-radius: 10px;
   padding: 20px;
-  margin: 5px;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 11, 211, 0.542),
+    0 6px 20px 0 rgba(0, 10, 205, 0.2);
 }
 
 .new-img-form {
   text-align: center;
   font-size: 20px;
-
-  padding: 60px;
+  margin: 60px;
 }
 
 .sub-btn {
