added link to pages

--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -1,5 +1,7 @@
 <div class="background-container">
   <h1>This is your private Library</h1>
+  <a class="library-link" href="/private/create">Create a new image</a>
+  <br />
   <div class="flex-container">
 
     {{#each allImages}}
