--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -3,7 +3,10 @@
 <div class="background-container">
   <div class="gallery-container">
     <h2> Your private Library</h2>
-
+    <a class="library-link" href="/private/create">Create your own image</a>
+    <br />
+    <br />
+    <br />
     <div class="flex-container-column">
       {{#if allImages.0.image}}
         <a href="/private-library/{{allImages.0._id}}">
