styled signup and login

--- a/views/Auth/login.hbs
+++ b/views/Auth/login.hbs
@@ -1,14 +1,19 @@
-<h1 class="h1-login">Log in</h1>
+<div class="background-container">
+  <div class="flex-container-column">
 
-<div class="login">
-  <form action="/login" method="post">
-    <input
-      type="username"
-      name="username"
-      value=""
-      placeholder="Enter your username"
-    />
-    <input type="password" name="password" value="" placeholder="******" />
-    <input type="submit" value="Log in" />
-  </form>
+    <h1 class="h1-login">Log in</h1>
+
+    <div class="login">
+      <form action="/login" method="post">
+        <input
+          type="username"
+          name="username"
+          value=""
+          placeholder="Enter your username"
+        />
+        <input type="password" name="password" value="" placeholder="******" />
+        <input type="submit" value="Log in" />
+      </form>
+    </div>
+  </div>
 </div>
