added link to carousel

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -88,6 +88,7 @@
         {{/each}}
         <div class="carousel-caption d-none d-md-block">
           <h5>The Sun Gallery</h5>
+          <a class="library-link" href="/sun">Go to The Sun Gallery</a>
         </div>
       </div>
 
@@ -98,6 +99,7 @@
         {{/each}}
         <div class="carousel-caption d-none d-md-block">
           <h5>The Moon Gallery</h5>
+          <a class="library-link" href="/moon">Go to The Moon Gallery</a>
         </div>
       </div>
 
@@ -108,6 +110,7 @@
         {{/each}}
         <div class="carousel-caption d-none d-md-block">
           <h5>The Venus Gallery</h5>
+          <a class="library-link" href="/venus">Go to The Venus Gallery</a>
         </div>
       </div>
 
@@ -117,7 +120,9 @@
             <img src="{{links.0.href}}" class="d-block w-100" alt="..." /></a>
         {{/each}}
         <div class="carousel-caption d-none d-md-block">
-          <h5>Mars Curiosity Images</h5>
+          <h5>Mars Curiosity Gallery</h5>
+          <a class="library-link" href="/curiosity">Go to The Mars Curiosity
+            Gallery</a>
         </div>
       </div>
     </div>
