--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -71,9 +71,17 @@
     {{{body}}}
 
     <footer>
-      <div>
-        <img class="moon-logo" src="/images/nasa-logo.png" alt="Nasa Logo" />
+
+      <div class="footer-container">
+        <a href="https://www.nasa.gov/" target="_blank">
+          <img class="nasa-logo" src="/images/nasa-logo.png" alt="" /></a>
+        <h3>NASA data provided by the :
+          <a href="https://api.nasa.gov/" target="_blank">NASA Open APIs</a>
+          <br />
+          Copyright 2023 NASA.</h3>
+
       </div>
+
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
